--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "BlogApp"
+    %title= content_for?(:title) ? yield(:title) : @blog.title
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
     = javascript_include_tag "application"
@@ -25,4 +25,6 @@
         .col-lg-12
           = yield
       %footer
-        %p &copy; Company 2017
+        %p
+          %span= fa_icon 'copyright'
+          = "#{@blog.author} #{Time.zone.now.year}"
