--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,7 +1,10 @@
-= simple_form_for [:admin, @post] do |f|
-  = f.input :title
-  = f.input :url_path
-  = f.input :tag_list
-  = f.input :body
-  = f.input :published_at, include_blank: true
-  = f.submit
+= simple_form_for [:admin, @post], html: { class: 'form-horizontal' } do |f|
+  = f.error_notification
+  .form-inputs
+    = f.input :title
+    = f.input :url_path
+    = f.input :tag_list
+    = f.input :body
+    = f.input :published_at, include_blank: true
+  .form-actions
+    = f.button :submit, class: 'btn btn-primary'
