Post tagging can be selected by select2

--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -3,7 +3,7 @@
   .form-inputs
     = f.input :title
     = f.input :url_path
-    = f.input :tag_list
+    = f.input :tag_list, as: :select, collection: @blog.tags, input_html: { class: 'select2', multiple: true }
     = f.input :body
     = f.input :published_at, include_blank: true
   .form-actions
