Improve admin page UI

--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -4,8 +4,8 @@
     = f.input :title
     = f.input :url_path
     = f.input :tag_list, as: :select, collection: @blog.tags, input_html: { class: 'select2', multiple: true }
-    = f.input :body
+    = f.input :body, input_html: { rows: 20 }
     = f.input :published
-    = f.input :published_at, include_blank: true
+    = f.input :published_at, include_blank: true, hint: "If you check 'published' and omit date time, set current time automaticaly."
   .form-actions
     = f.button :submit, class: 'btn btn-primary'
