Add markdown preview feature to admin post form page.

--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -18,9 +18,11 @@
 //= require select2
 //= require_tree .
 
+window.global = {};
+
 $(document).on('turbolinks:load', function(){
-  $(".select2").select2({ tags: true })
-  $("#post_title").keyup(function(e) {
-    $("#post_url_path").val($(e.target).val())
-  })
+  $(".select2").select2({
+    tags: true,
+    theme: 'bootstrap'
+  });
 });
