--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -12,8 +12,7 @@
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
 
-
-  %body
+  %body{ data: { page: { id: content_for?(:page_id) ? content_for(:page_id) : 'general' } }}
     .navbar.navbar-expand-lg.navbar-dark.bg-dark
       %a.navbar-brand(href= admin_root_path )= @blog.title
       %button.navbar-toggler{ type: 'button', data: {toggle:"collapse", target:"#navbar-links" }}
@@ -35,7 +34,7 @@
 
     .container
       .row.mt-3
-        .col-lg-9
+        .col
           = yield
       %footer
         %p &copy; Company 2017
