--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,4 +1,4 @@
-- content_for :page_id { 'post_form' }
+- content_for :page_id, 'post_form'
 = simple_form_for [:admin, @post], html: { class: 'form-horizontal' } do |f|
   = f.error_notification
   .form-inputs
