--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -3,7 +3,9 @@
     %h2.card-title= link_to post.title, post_path(post.url_path)
     .tags
       - post.tag_list.each do |tag|
-        = link_to tag, posts_path(tag: tag), class: 'badge badge-primary'
+        = link_to posts_path(tag: tag), class: 'badge badge-primary mr-1' do
+          = fa_icon 'tag'
+          = tag
   .card-body
     .card-text
       - if controller.action_name == 'index'
