--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,18 +14,25 @@
 
 
   %body
-    .jumbotron
+    %header.border.border-black.pt-3
       .container
-        %h1.display-3= link_to @blog.title, root_path
-        %p.lead= @blog.description
-    .container
-      .row
-        .col
-          = breadcrumbs
-      .row
-        .col
-          = yield
-      %footer
-        %p
-          %span= fa_icon 'copyright'
-          = "#{@blog.author} #{Time.zone.now.year}"
+        .d-flex.justify-content-center
+          %h1#blog-title= link_to @blog.title, root_path
+        .d-flex.justify-content-center
+          %p.lead= @blog.description
+    .pt-3.bg-light
+      .container
+        .row
+          .container
+            .row.d-flex.justify-content-center.mb-1
+              .col-lg-8
+                = breadcrumbs
+            .row.d-flex.justify-content-center
+              .col-lg-8
+                = yield
+        .row
+          .container
+            .col
+              %footer.justify-content-center
+                %span= fa_icon 'copyright'
+                = "#{@blog.author} #{Time.zone.now.year}"
