Justify footer center

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,6 +33,6 @@
         .row
           .container
             .col
-              %footer.justify-content-center
+              %footer.d-flex.justify-content-center
                 %span= fa_icon 'copyright'
                 = "#{@blog.author} #{Time.zone.now.year}"
