--- a/app/views/admin/blogs/edit.html.haml
+++ b/app/views/admin/blogs/edit.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for [:admin, @blog] do |f|
   = f.input :title
   = f.input :description
+  = f.input :author
   = f.submit class: 'btn btn-primary'
