--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
         .d-flex.justify-content-center
           %h1#blog-title= link_to @blog.title, root_path
         .d-flex.justify-content-center
-          %p.lead= @blog.description
+          %p.lead= raw htmlize(@blog.description)
     .pt-3
       .container
         .row
