--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -8,8 +8,8 @@
     .form-row
       .col= f.input :tag_list, as: :select, collection: @blog.tags.map(&:name), input_html: { class: 'select2', multiple: true }
     .form-row
-      .col= f.input :body, input_html: { rows: 20 }
-      .col
+      .col-lg-6= f.input :body, input_html: { rows: 20 }
+      .col-lg-6
         %label Preview
         .card
           .card-text
