--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,11 @@ a:hover {
 }
 
 article {
+    img{
+        width: 100%;
+        height: auto;
+        display: block;
+    }
     footer{
         font-size: small;
     }
