--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -11,7 +11,7 @@
       .col-lg-6= f.input :body, input_html: { rows: 20 }
       .col-lg-6
         %label Preview
-        .card
+        %article.card
           .card-text
             .card-body
               .card-text
