--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,6 +1,8 @@
 - content_for :page_id, 'post_form'
 = simple_form_for [:admin, @post], html: { class: 'form-horizontal' } do |f|
   = f.error_notification
+  .form-actions.d-flex.justify-content-end
+    = f.button :submit, class: 'btn btn-primary'
   .form-inputs
     .form-row
       .col= f.input :title
